# Omega-Psi

./: .gitignore  .replit  LICENSE  README.md  app.py  database.py  game.py  keepAlive.py  main.py  package-lock.json  pyproject.toml  readme.md  requirements.txt  serverModerator.py
category/: botModerator.py  category.py  code.py  commands.md  dbl.py  errors.py  game.py  gif.py  globals.py  help.py  image.py  insult.py  internet.py  math.py  meme.py  misc.py  nsfw.py  predicates.py  rank.py  serverModerator.py  updates.py  weather.py
category/animal/: animal.py
category/api/: api.py
category/bot/: bot.py
category/code/: base_converter.py  code.py  logic_parser.py
category/food/: drink.py  food.py  meal.py
category/game/: cards_against_humanity.py  connect_four.py  game.py  hangman.py  scramble.py  tic_tac_toe.py  uno.py
category/image/: image.py
category/info/: info.py
category/insults/: insults.py
cogs/: converters.py  errors.py  globals.py  help_command.py  predicates.py
data/: omegaPsi.json
database/: bot.py  case_numbers.py  data.py  database.py  guilds.py  online_status.py  users.py
static/: browserconfig.xml  site.webmanifest  styles.css
templates/: commands.html  developer.html  feedback.html  home.html  index.html  info.html  missingAccess.html  noSuchGuild.html  notServerManager.html  pageNotFound.html  privacyPolicy.html  roadmap.html  server.html  settings.html  website.html
util/: discord.py  email.py  functions.py  github.py  google.py  ifttt.py  imgur.py  misc.py  string.py  utils.py
website/: errors.py  page.py  website.py
(+212 files in other folders)
