[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "omegapsi"
version = "0.1.0"
[tool.poetry.dependencies]
"discord.py" = "^1.3"
python = "^3.7"
Flask = "^1.1"
Flask-Session = "^0.3.1"
IMDbPY = "^6.8"
Pillow = "^7.0"
pymongo = "^3.10"
requests = "^2.23"
[tool.poetry.dev-dependencies]
