[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "omegapsi"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^1.1"
Flask-Session = "^0.3.1"
IMDbPY = "^6.8"
Pillow = "^7.0"
"discord.py" = "^1.4"
pymongo = "^3.10"
python = "^3.8"
requests = "^2.23"
replit = "^2.0.0"
dnspython = "^2.0.0"
[tool.poetry.dev-dependencies]
