[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Jonah Pierce <fellowhashbrown@gmail.com>"]
description = "A Discord bot with a lot of stuff in it!"
name = "omegapsi"
version = "10.0.0"
[tool.poetry.dependencies]
Flask = "^1.1"
Flask-Session = "^0.3.1"
IMDbPY = "^6.8"
Pillow = "^9.3"
"discord.py" = "^1.4"
pymongo = "^3.10"
python = "^3.8"
requests = "^2.23"
replit = "^2.0.0"
dnspython = "^2.0.0"
pynacl = "^1.4.0"
chess = "^1.2.2"
youtube-dl = "^2020.11.1"
imparaai-checkers = "^1.4.2"
[tool.poetry.dev-dependencies]
